# notion-to-llms-txt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/notion_to_llms_txt/: __init__.py  generator.py  main.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_generator.py  test_models.py  test_parser.py
tests/fixtures/sample_export/Documentation/: Setup Guide def345678901234567890abcdef12345.md
tests/fixtures/sample_export/Projects/: AI Development Guidelines abc123def456789012345678901234ab.md  Database Page 7d79223f342f9124d0ca375d71f877a7.md  Empty Page def456789012345678901234567890ab.md  Links Collection abc012345678901234567890abcdef12.md  Untitled fed789012345678901234567890abcde.md
tests/fixtures/sample_export/Team/: Meeting Notes abc56789012345678901234567890abc.md
