[project]
name = "notion-to-llms-txt"
version = "0.1.0"
description = "Convert Notion exports to LLMS.txt format for AI agents"
readme = "README.md"
authors = [
    { name = "Tomoaki Nakamura", email = "tomoaki.nakamura@elyza.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]
keywords = ["notion", "llms", "export", "markdown", "ai", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
license = { text = "Apache-2.0" }
homepage = "https://github.com/tyo-yo/notion-to-llms-txt"
repository = "https://github.com/tyo-yo/notion-to-llms-txt"
documentation = "https://github.com/tyo-yo/notion-to-llms-txt#readme"

[project.scripts]
notion-to-llms-txt = "notion_to_llms_txt.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults (common in Typer)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
